src/components/Gallery/Thumb/Thumb.module.css
.link {
  color: inherit;
  text-decoration: none;
}

.container {
  width: 340px;
  height: 340px;
  background: var(--primary-color);

  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.gradient {
  position: relative;
  width: 100%;
  height: 100%;

  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(0, 0, 0, 0.5) 100%
  );

  border-radius: 10px;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  text-align: start;

  padding: 20px;
}

.cover {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.locationName {
  z-index: 99;
  font-size: 1rem;
  margin: 0;
  color: white;
  /* Adding some dark text shadow to see white text on white background */
  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
    1px 1px 0 #000;
  line-height: 142.6%;
}

/* --------------- Tablet & Mobile --------------- */
@media (max-width: 992px) {
  .container {
    width: 100%;
    height: 225px;
    background: var(--primary-color);

    border-radius: 10px;
  }

  .gradient {
    padding: 15px 20px;
  }
}

